fixed spacing on interact-text

--- a/styles/style.css
+++ b/styles/style.css
@@ -4515,25 +4515,15 @@ footer {
         width: 100%;
     }
 
-    .response-prev, .response-next {
-        /* cursor: pointer; */
-        /* position: absolute;
-        top: 50%; */
+    .response-prev, 
+    .response-next {
         width: auto;
         margin: 0 auto;
-        font-size: 25px;
+        font-size: 20px;
         transition: 0.6s ease;
         border-radius: 0 3px 3px 0;
         user-select: none;
         padding: 20px;
-        /* margin-top: -22px;
-        padding: 16px;
-        color: #262626;
-        font-weight: bold;
-        font-size: 50px;
-        transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
-        user-select: none; */
     }
 
     .led-video {
@@ -4545,7 +4535,11 @@ footer {
         grid-template-columns: 1fr;
         padding: 0;
     }
-
+    
+    .interact-text {
+        padding: 10px;
+    }
+    
     .led-video-img img {
         width: 60%;
     }
